--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,23 @@
+:root {
+    color: white;
+    background-color: black;
+    opacity: 90%;
+}
+
+
+body {
+    margin: 0px;
+}
+
+
 .container{
     display:flex;
     width:100vw;
-    height:100vh; 
+    height: 100vh; 
+    justify-content: center;
+    max-width: 100%;
+    max-height: 100%;
+    
 }
 
 .container-left {
@@ -9,6 +25,86 @@
     background-size: cover;
     background-position: center;
     background-repeat:no-repeat;
-    width:30vw;
-    margin:0;
+    width:60vw;
+}
+
+.container-right {
+    display: flex;
+    flex-direction: column;
+    padding-left: 1%;
+    justify-content: center;
+    height: 80%;
+    padding: 50px;
+}
+
+.form {
+    display: flex;
+    flex-direction: column;
+    border-top: 5px solid black;
+}
+
+form {
+    display:flex;
+    flex-wrap: wrap;
+    gap: 30px;
+    align-items: flex-start;
+    width: 60%;
+    padding-bottom: 5%;
+    
+    
+}
+
+.input {
+    display: flex;
+    flex-direction: column;
+    width: 40%;
+    flex-wrap: wrap;
+}
+
+
+.textbox {
+    font-size: 1.5rem;
+    line-height:.5em;
+}
+
+.logo-container {
+    opacity: 80%;
+    display: flex;
+    justify-content: center;
+    position: relative;
+    top: 30%;
+    font-size: 2rem;
+
+}
+
+.odinlogo{
+    width: min(10%, 150px)
+}
+
+a:link {
+    color: gold;
+}
+
+a:visited {
+    color:purple;
+}
+
+button {
+    font-size: 1.5rem;
+    background-color: rgba(255, 217, 0, 0.589);
+    color:black;
+    padding-top:10px;
+    padding-bottom: 10px;
+    font-weight:bold;
+    border-radius: 4%;
+
+}
+
+button:hover {
+    background-color: gold;;
+    color:black;
+}
+
+.login {
+    margin-top: 30px;
 }
