--- a/styles.css
+++ b/styles.css
@@ -25,7 +25,7 @@ body {
     background-size: cover;
     background-position: center;
     background-repeat:no-repeat;
-    width:60vw;
+    width:100%;
 }
 
 .container-right {
@@ -33,8 +33,7 @@ body {
     flex-direction: column;
     padding-left: 1%;
     justify-content: center;
-    height: 80%;
-    padding: 50px;
+    height: 100%;
 }
 
 .form {
@@ -48,8 +47,8 @@ form {
     flex-wrap: wrap;
     gap: 30px;
     align-items: flex-start;
-    width: 60%;
     padding-bottom: 5%;
+    font-size: 1.2rem;
     
     
 }
@@ -61,6 +60,9 @@ form {
     flex-wrap: wrap;
 }
 
+input {
+    font-size: 1.2rem;
+}
 
 .textbox {
     font-size: 1.5rem;
@@ -107,4 +109,17 @@ button:hover {
 
 .login {
     margin-top: 30px;
+}
+
+input:focus {
+    background-color: gold;
+}
+
+input:valid {
+    border: 3px solid green;
+}
+
+input:invalid {
+    border: 3px solid rgba(255, 0, 0, 0.562);
+
 }
